# Universe-Game

./: CMakeLists.txt  OpenGLRenderer.cpp  OpenGLRenderer.h  Planet.cpp  Planet.h  README.md  main.cpp
glad/: glad.c  glad.h
python/: uv_sphere_generator.py
